force-app/main/default/objects/IFv2_Workflow__c/IFv2_Workflow__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Details of all the Workflows</description>
    <label>Workflow</label>
</CustomObject>