force-app/main/default/objects/IFv2_Workflow__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to activate/deactivate a workflow</description>
    <inlineHelpText>Select the checkbox if you want the workflow to be active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>