force-app/main/default/objects/IFv2_Workflow__c/fields/ApplicationKey__c.field-meta.xml
<CustomField>
    <fullName>ApplicationKey__c</fullName>
    <inlineHelpText>Please enter the application key for the Workflow</inlineHelpText>
    <label>Application Key</label>
    <length>250</length>
    <type>Text</type>
</CustomField>