force-app/main/default/objects/IFv2_Workflow__c/fields/Approver01Role__c.field-meta.xml
<CustomField>
    <fullName>Approver01Role__c</fullName>
    <inlineHelpText>Mention the Approval Role.</inlineHelpText>
    <label>Approver 01 Role</label>
    <length>250</length>
    <type>Text</type>
</CustomField>