force-app/main/default/objects/IFv2_Workflow__c/fields/Approver02Role__c.field-meta.xml
<CustomField>
    <fullName>Approver02Role__c</fullName>
    <label>Approver 02 Role</label>
    <length>250</length>
    <type>Text</type>
</CustomField>