force-app/main/default/objects/IFv2_Workflow__c/fields/Approver03Role__c.field-meta.xml
<CustomField>
    <fullName>Approver03Role__c</fullName>
    <label>Approver 03 Role</label>
    <length>250</length>
    <type>Text</type>
</CustomField>