force-app/main/default/objects/IFv2_Workflow__c/fields/Approver10__c.field-meta.xml
<CustomField>
    <fullName>Approver10__c</fullName>
    <label>Approver 10</label>
    <length>250</length>
    <type>Text</type>
</CustomField>