force-app/main/default/objects/IFv2_Workflow__c/fields/Approver11__c.field-meta.xml
<CustomField>
    <fullName>Approver11__c</fullName>
    <description>Stores the Approver ID</description>
    <label>Approver 11</label>
    <length>255</length>
    <type>Text</type>
</CustomField>