force-app/main/default/objects/IFv2_Workflow__c/fields/Approver12__c.field-meta.xml
<CustomField>
    <fullName>Approver12__c</fullName>
    <description>Stores the Approver ID</description>
    <label>Approver 12</label>
    <length>255</length>
    <type>Text</type>
</CustomField>