force-app/main/default/objects/IFv2_Workflow__c/fields/ArchivingAfterDays__c.field-meta.xml
<CustomField>
    <fullName>ArchivingAfterDays__c</fullName>
    <defaultValue>180</defaultValue>
    <inlineHelpText>Enter the number of days after which the record should be archived</inlineHelpText>
    <label>Archiving After (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>