force-app/main/default/objects/IFv2_Workflow__c/fields/B2B_Incoterms2__c.field-meta.xml
<CustomField>
    <fullName>B2B_Incoterms2__c</fullName>
    <label>Incoterms 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>