force-app/main/default/objects/IFv2_Workflow__c/fields/B2B_SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>B2B_SalesOffice__c</fullName>
    <label>Sales Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>