force-app/main/default/objects/IFv2_Workflow__c/fields/B2B_TermsOfPayment__c.field-meta.xml
<CustomField>
    <fullName>B2B_TermsOfPayment__c</fullName>
    <label>Terms of Payment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>