force-app/main/default/objects/IFv2_Workflow__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Enter the category of the Workflow.</inlineHelpText>
    <label>Category</label>
    <length>250</length>
    <type>Text</type>
</CustomField>