force-app/main/default/objects/IFv2_Workflow__c/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <label>Company Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>