force-app/main/default/objects/IFv2_Workflow__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <inlineHelpText>Enter the country for which this workflow is related to</inlineHelpText>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>