force-app/main/default/objects/IFv2_Workflow__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to make this Workflow available for all the countries</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>