force-app/main/default/objects/IFv2_Workflow__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>Enter the Workflow description here.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>