force-app/main/default/objects/IFv2_Workflow__c/fields/DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel__c</fullName>
    <label>Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>