force-app/main/default/objects/IFv2_Workflow__c/fields/HelpUrl__c.field-meta.xml
<CustomField>
    <fullName>HelpUrl__c</fullName>
    <description>This is used to give link of the document to open if a help icon is clicked on request detail page.</description>
    <inlineHelpText>Link of the document to open if a help icon is clicked on request detail page.</inlineHelpText>
    <label>Help Url</label>
    <type>Url</type>
</CustomField>