force-app/main/default/objects/IFv2_Workflow__c/fields/LocalExpert__c.field-meta.xml
<CustomField>
    <fullName>LocalExpert__c</fullName>
    <inlineHelpText>Enter the Local Expert ID of the workflow based on the country.</inlineHelpText>
    <label>Local Expert</label>
    <length>250</length>
    <type>Text</type>
</CustomField>