force-app/main/default/objects/IFv2_Workflow__c/fields/ProcessOwner__c.field-meta.xml
<CustomField>
    <fullName>ProcessOwner__c</fullName>
    <inlineHelpText>Enter the Process Owner ID.</inlineHelpText>
    <label>Process Owner</label>
    <length>250</length>
    <type>Text</type>
</CustomField>