force-app/main/default/objects/IFv2_Workflow__c/fields/ProductionPlant2__c.field-meta.xml
<CustomField>
    <fullName>ProductionPlant2__c</fullName>
    <label>Production Plant 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>