force-app/main/default/objects/IFv2_Workflow__c/fields/ReminderAfterDays__c.field-meta.xml
<CustomField>
    <fullName>ReminderAfterDays__c</fullName>
    <defaultValue>7</defaultValue>
    <inlineHelpText>Enter the number of days after which the first reminder mail should be sent to the pending Approvers</inlineHelpText>
    <label>Reminder After (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>