force-app/main/default/objects/IFv2_Workflow__c/fields/RequestorName__c.field-meta.xml
<CustomField>
    <fullName>RequestorName__c</fullName>
    <label>Requestor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>