force-app/main/default/objects/IFv2_Workflow__c/fields/RequestRecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RequestRecordTypeId__c</fullName>
    <label>Request Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>