force-app/main/default/objects/IFv2_Workflow__c/fields/RetentionTimeDays__c.field-meta.xml
<CustomField>
    <fullName>RetentionTimeDays__c</fullName>
    <inlineHelpText>Enter the number of days for the retention time.</inlineHelpText>
    <label>Retention Time (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>