force-app/main/default/objects/IFv2_Workflow__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <label>Sales Org</label>
    <length>80</length>
    <type>Text</type>
</CustomField>