force-app/main/default/objects/IFv2_Workflow__c/fields/SAPSystem__c.field-meta.xml
<CustomField>
    <fullName>SAPSystem__c</fullName>
    <label>SAP System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>