force-app/main/default/objects/IFv2_Workflow__c/fields/SubsequentReminderAfter__c.field-meta.xml
<CustomField>
    <fullName>SubsequentReminderAfter__c</fullName>
    <description>The number of days after which subsequent reminders should be sent.</description>
    <inlineHelpText>Enter the number of days after which subsequent reminders should be sent</inlineHelpText>
    <label>Subsequent Reminder After (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>