force-app/main/default/objects/IFv2_Workflow__c/fields/Workflow__c.field-meta.xml
<CustomField>
    <fullName>Workflow__c</fullName>
    <description>The name of the Workflow</description>
    <inlineHelpText>Enter the name of the Workflow</inlineHelpText>
    <label>Workflow</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>