force-app/main/default/objects/IFv2_Workflow__c/listViews/Workflows.listView-meta.xml
<ListView>
    <fullName>Workflows</fullName>
    <columns>NAME</columns>
    <columns>Workflow__c</columns>
    <columns>Country__c</columns>
    <columns>Category__c</columns>
    <columns>Active__c</columns>
    <columns>ArchivingAfterDays__c</columns>
    <filterScope>Everything</filterScope>
    <label>Workflows</label>
    <language>en_US</language>
</ListView>